Fix grid layout issues (#5)

--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,27 @@
 html, body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
     color: #FFFFFF;
     background-color: #000000;
-    height: 100vh;
-    overflow: hidden;
+    height: 100%;
+}
+
+body {
+    padding-top: 56px;
 }
 
 #bloch-sphere {
-    padding-top: 56px;
-    min-height: calc(85vh - 56px);
+    height: 80%;
 }
 
 #state-vector {
     font-family: 'Courier New', Courier, monospace;
-    font-size: 1.5vh;
+    font-size: 1.2vw; /* Magic number to fit state-vector content on different screen sizes */
     text-align: center;
-    min-height: 15vh;
+    height: 20%;
 }
 
 #toolbox {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
-    padding-top: 56px;
-    max-height: 100vh;
     overflow: auto;
 }
 
